--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 # Application configurations
 spring.application.name=duskswap
-server.context-path=duskswap
-server.servlet-path=duskswap
 
 # Database configurations
 spring.jpa.database=postgresql
@@ -11,14 +9,27 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=INFO
 spring.datasource.initialization-mode=never
-spring.datasource.url=jdbc:postgresql://localhost:5432/duskpay
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://database-1-dbloc.cuo1g2l9lovc.eu-west-3.rds.amazonaws.com:5432/duskpay2
+#jdbc:postgresql://localhost:5432/duskpay
+spring.datasource.username=duskuser
+#postgres
+spring.datasource.password=passo98AZUrvial
+#postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+spring.data.mongodb.database = binance
+spring.data.mongodb.host = localhost
+spring.data.mongodb.port = 27017
 
 # Security configurations
 duskpay.app.jwtSecret= DuskPaySecretKey
 duskpay.app.jwtExpirationMs= 86400000
+
+# dates configs
+spring.mvc.format.date=dd/MM/yyyy
+spring.mvc.format.date-time=dd/MM/yyyy HH:mm:ss
+spring.mvc.format.time=HH:mm:ss
 
 # Mailing configuration
 spring.cloud.aws.ses.region=us-east-1
@@ -28,6 +39,3 @@ aws.secretKey = rFNZfxpjxOpg8LxNNmgSaIPQB1VJg7ZDw+tav2XV
 # Verification code params
 signup.code.validity.inDays = 7
 signin.code.validity.inDays = 2
-
-# BTCPAY server properties
-btcpay.server.api = 71108d2c1722443951e445849678ed01591c64f1
