--- a/pom.xml
+++ b/pom.xml
@@ -111,11 +111,11 @@
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
 
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
-		</dependency>
+		</dependency>-->
 
 	</dependencies>
 
@@ -135,7 +135,7 @@
 			</plugin>
 		</plugins>
 
-		<finalName>${artifactId}</finalName>
+		<finalName>${project.artifactId}</finalName>
 
 	</build>
 
