updating to work in dev

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,12 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=INFO
 spring.datasource.initialization-mode=never
-spring.datasource.url=jdbc:postgresql://database-1-dbloc.cuo1g2l9lovc.eu-west-3.rds.amazonaws.com:5432/duskpay2
-spring.datasource.username=duskuser
-spring.datasource.password=passo98AZUrvial
+spring.datasource.url=jdbc:postgresql://localhost:5432/duskpay
+#jdbc:postgresql://database-1-dbloc.cuo1g2l9lovc.eu-west-3.rds.amazonaws.com:5432/duskpay2
+spring.datasource.username=postgres
+#duskuser
+spring.datasource.password=postgres
+#passo98AZUrvial
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Security configurations
