--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.application.name=duskswap
 # Database configurations
 spring.jpa.database=postgresql
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC+1
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true 
 spring.jpa.hibernate.ddl-auto=update
