fixing deposit status update 3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,6 @@ aws.secretKey = rFNZfxpjxOpg8LxNNmgSaIPQB1VJg7ZDw+tav2XV
 signup.code.validity.inDays = 7
 signin.code.validity.inDays = 2
 withdrawal.code.validity.inMinutes = 5
+
+# logging file
+logging.file.name = /var/log/duskswap.log
