--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,8 +29,8 @@ spring.mvc.format.time=HH:mm:ss
 
 # Mailing configuration
 spring.cloud.aws.ses.region=us-east-1
-aws.accessKey = AKIA4FZ64SDI66OMY6VN
-aws.secretKey = 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
+aws.accessKey =
+aws.secretKey = 
 
 # Verification code params
 signup.code.validity.inDays = 7
